fix: pdp image stretch

--- a/tailwind.css
+++ b/tailwind.css
@@ -4,6 +4,10 @@
 
 @layer base {
 
+  :root {
+    color-scheme: light only !important;
+  }
+
   /* Allow changing font family via CMS */
   html {
     font-family: var(--font-family);
